src/Terms/TermItem/style.module.css
.term {
    border: solid var(--dominantLanguageColor) var(--thickBorder);
    background: var(--dominantLanguageColor);
    background: var(--white);
    cursor: pointer;
    display: flex;
    flex-direction: column;
    overflow: hidden;
    position: relative;
}

.term.medium {
    height: 25rem;
}

.term:hover {
    --dominantLanguageColor: var(--orange);
}

.body,
.header {
    padding: 0.5rem;
}

.body {
    flex: 1;
}

.header {
    background: var(--dominantLanguageColor);
}

.heading {
    margin: 0;
    font-weight: normal;
    font-style: italic;
    font-size: var(--fontSizeXL);
    overflow: hidden;
    text-overflow: ellipsis;
}

.headingLink {
    color: var(--blackDark);
    text-decoration: none;
}

.section + .section {
    margin-top: 2rem;
}

.bodyHeading {
    font-weight: normal;
    font-size: var(--fontSizeM);
    margin: 0.5rem 0;
}

.commentFooter {
    display: flex;
    align-items: flex-end;
    justify-content: space-around;
    padding: 0.5rem;
    text-align: center;
    position: absolute;
    z-index: 1;
    bottom: 0;
    left: 0;
    right: 0;
    height: 5rem;
    background: linear-gradient(to bottom, transparent 0%, var(--white) 65%, var(--white) 100%);
}

.smallSummary {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    height: 100%;
}

.smallSummaryEmpty {
    font-size: var(--fontSizeS);
    color: var(--disabledGrey);
    font-style: italic;
}

.smallSummaryTranslationList {
    padding: 0;
    margin: 0 0 0.5rem;
    list-style: none;
}

.smallSummaryTranslationListItem {
    display: inline-block;
    margin-right: 0.8rem;
}

.footer {
    flex: 0 0 auto;
}

@media (min-width: 700px) {
    .term.small {
        flex-direction: row;
    }

    .smallSummary {
        align-items: center;
        flex-direction: row;
    }

    .smallSummaryTranslationList {
        margin: 0;
    }
}

@media (min-width: 1000px) {
    .medium .body,
    .medium .header,
    .commentFooter {
        padding: 1rem;
    }
}

